@@ -2,5 +2,5 @@ from z3c.relationfield.relation import (RelationValue,
                                         TemporaryRelationValue,
                                         create_relation)
 from z3c.relationfield.index import RelationCatalog
-from z3c.relationfield.schema import Relation, RelationList
+from z3c.relationfield.schema import Relation, RelationChoice, RelationList
 from z3c.relationfield.event import realize_relations
